--- a/Analyse_de_texte.ipynb
+++ b/Analyse_de_texte.ipynb
@@ -208,15 +208,15 @@
     {
       "cell_type": "code",
       "source": [
-        "import re\n",
-        "import numpy as np\n",
-        "from bs4 import BeautifulSoup\n",
-        "from collections import Counter"
+        "import re #Pour le traitement de HTML\n",
+        "import numpy as np #Import par défaut\n",
+        "from bs4 import BeautifulSoup #Pour extraire plus facilement de l'html\n",
+        "from collections import Counter #Pour la sicion du jeux de DD"
       ],
       "metadata": {
         "id": "o2qMkaSLCUsr"
       },
-      "execution_count": 5,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -345,68 +345,6 @@
       },
       "execution_count": 21,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Pour le moment nous allons continuer avec des exemples simples"
-      ],
-      "metadata": {
-        "id": "pTxXaguE7kU9"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "doc = nlp(\"Terrible désillusion pour la championne du monde\")\n",
-        "for chunk in doc.noun_chunks:\n",
-        "    print(chunk.text, \" --> \", chunk.label_)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dhik4rRf8Cld",
-        "outputId": "fd2d45e1-20c2-468b-e887-8610a1b240f7"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Terrible désillusion  -->  NP\n",
-            "la championne  -->  NP\n",
-            "monde  -->  NP\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "doc = nlp(\"Demain je travaille en France chez Microsoft\")\n",
-        "for ent in doc.ents:\n",
-        "    print(ent.text, ent.label_)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1vMlnzXw-NKd",
-        "outputId": "1549dfe9-c20d-438f-8aae-2635094f29b9"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "France LOC\n",
-            "Microsoft ORG\n"
-          ]
-        }
-      ]
     }
   ]
 }
