modif path analyse de texte.ipynb

--- a/Analyse_de_texte.ipynb
+++ b/Analyse_de_texte.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/BaptisteNauguier/Projet_Analyse_Textuelle/blob/main/Analyse_de_texte.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,21 +12,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#!kill -9 -1"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "GSImldLK9PIh"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#!kill -9 -1"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -49,44 +31,47 @@
         "id": "dQBEt4vo9U8l",
         "outputId": "733e5709-db4e-4d23-ddf4-6ec675b072a2"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Gvyng6fe_wVN"
+      },
       "source": [
         "Import de spacy, librairies de traitement de texte. Liens utiles : \n",
         "\n",
         "*  https://medium.com/@dhifallah.othmen/extraction-et-entra%C3%AEnement-des-entit%C3%A9s-nomm%C3%A9es-avec-spacy-90f7e1a219d7\n",
         "*  https://course.spacy.io/fr/\n",
         "*  https://datacorner.fr/spacy/"
-      ],
-      "metadata": {
-        "id": "Gvyng6fe_wVN"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "r1sNTjEG5xCe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "r1sNTjEG5xCe",
         "outputId": "f525369a-704a-4cda-c69d-4f7671b78bad"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: spacy in /usr/local/lib/python3.9/dist-packages (3.4.4)\n",
@@ -179,8 +164,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.9/dist-packages/torch/cuda/__init__.py:497: UserWarning: Can't initialize NVML\n",
             "  warnings.warn(\"Can't initialize NVML\")\n"
@@ -198,29 +183,34 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Code qui permet la normalisation du texte"
-      ],
       "metadata": {
         "id": "WW4jTsgs_vVi"
-      }
+      },
+      "source": [
+        "Code qui permet la normalisation du texte"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {
+        "id": "o2qMkaSLCUsr"
+      },
+      "outputs": [],
       "source": [
         "import re #Pour le traitement de HTML\n",
         "import numpy as np #Import par défaut\n",
         "from bs4 import BeautifulSoup #Pour extraire plus facilement de l'html\n",
         "from collections import Counter #Pour la sicion du jeux de DD"
-      ],
-      "metadata": {
-        "id": "o2qMkaSLCUsr"
-      },
-      "execution_count": 22,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "JN2z7AcR_lPT"
+      },
+      "outputs": [],
       "source": [
         "# Charger le fichier HTML\n",
         "with open(\"/content/drive/MyDrive/Colab Notebooks/gd-fiscalite_depenses-utf8-sgml-cwb.html\", \"r\") as f:\n",
@@ -230,43 +220,31 @@
         "html = re.sub(r'<[^>]*?>', '', html)\n",
         "\n",
         "# Écrire le contenu modifié dans un fichier HTML\n",
-        "with open(\"fichier_modifie.html\", \"w\") as f:\n",
+        "with open(\"../fichier_modifie.html\", \"w\") as f:\n",
         "    f.write(html)\n",
         "\n",
         "# Supprimer les lignes vides du fichier modifié\n",
-        "with open(\"fichier_modifie.html\", \"r\") as f:\n",
+        "with open(\"../fichier_modifie.html\", \"r\") as f:\n",
         "    lines = f.readlines()\n",
         "\n",
         "lines = [line.strip() for line in lines if line.strip()]\n",
         "\n",
-        "with open(\"fichier_sans_lignes_vides.html\", \"w\") as f:\n",
+        "with open(\"../fichier_sans_lignes_vides.html\", \"w\") as f:\n",
         "    f.write(\"\\n\".join(lines))"
-      ],
-      "metadata": {
-        "id": "JN2z7AcR_lPT"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Affiche le début du contenu du texte \"fichier_sans_lignes_vides.html\""
-      ],
       "metadata": {
         "id": "1n8y2oJxGqJE"
-      }
+      },
+      "source": [
+        "Affiche le début du contenu du texte \"fichier_sans_lignes_vides.html\""
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from IPython.display import HTML\n",
-        "\n",
-        "with open(\"fichier_sans_lignes_vides.html\", \"r\") as f:\n",
-        "    content = f.readlines()\n",
-        "    \n",
-        "HTML(\"\".join(content[:10]))#Affiche les 10 premieres lignes"
-      ],
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -275,14 +253,9 @@
         "id": "jXWh4oPNGjaT",
         "outputId": "485aa390-7662-4196-adb7-ae064abcd1b0"
       },
-      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "Chaque citoyen même modeste devrait payer l'impôt sur le revenu. Ne pas prendre la classe moyenne pour des vaches à lait. Supprimer la taxe d'habitation pour tout le monde et ne pas faire payer à nouveau la classe moyenne.\n",
               "L'impôt sur les revenus.\n",
@@ -294,24 +267,41 @@
               "Redėfinir des tranches pour lisser l'imposition plus juste. Actuellement un écart important de revenu pour un taux imposition identique\n",
               "Impot sur le revenu\n",
               "Reculer l'âge de la retraite|Augmenter le temps de travail|Revoir les conditions d'attribution de certaines aides sociales\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
+          "execution_count": 10,
           "metadata": {},
-          "execution_count": 10
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "from IPython.display import HTML\n",
+        "\n",
+        "with open(\"../fichier_sans_lignes_vides.html\", \"r\") as f:\n",
+        "    content = f.readlines()\n",
+        "    \n",
+        "HTML(\"\".join(content[:10]))#Affiche les 10 premieres lignes"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Premier traitement de texte avec spacy tokenisation de tout le texte"
-      ],
       "metadata": {
         "id": "bpk6NKIc19gi"
-      }
+      },
+      "source": [
+        "Premier traitement de texte avec spacy tokenisation de tout le texte"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "id": "7SmIS6CwUvij"
+      },
+      "outputs": [],
       "source": [
         "def process_doc(doc):\n",
         "    word_freq = Counter()\n",
@@ -321,7 +311,7 @@
         "    return word_freq\n",
         "\n",
         "# Ouvrir le fichier et récupérer son contenu\n",
-        "with open(\"fichier_sans_lignes_vides.html\", \"r\", encoding=\"utf-8\") as f:\n",
+        "with open(\"../fichier_sans_lignes_vides.html\", \"r\", encoding=\"utf-8\") as f:\n",
         "    lines = f.readlines()\n",
         "\n",
         "# Nombre de lignes à traiter à la fois\n",
@@ -336,15 +326,25 @@
         "    word_freq += chunk_word_freq\n",
         "\n",
         "# Écrire les résultats dans un fichier texte\n",
-        "with open(\"Top mots.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+        "with open(\"../Top mots.txt\", \"w\", encoding=\"utf-8\") as f:\n",
         "    for word, freq in word_freq.most_common():\n",
         "        f.write(f\"{word}\\t{freq}\\n\")\n"
-      ],
-      "metadata": {
-        "id": "7SmIS6CwUvij"
-      },
-      "execution_count": 21,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
