ajout segmentation départment

--- a/Analyse_de_texte.ipynb
+++ b/Analyse_de_texte.ipynb
@@ -1,36 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!kill -9 -1"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "GSImldLK9PIh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!kill -9 -1"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -38,44 +21,47 @@
         "id": "dQBEt4vo9U8l",
         "outputId": "6dbf62ca-2d36-420f-aa1a-9190630b38d1"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Gvyng6fe_wVN"
+      },
       "source": [
         "Import de spacy, librairies de traitement de texte. Liens utiles : \n",
         "\n",
         "*  https://medium.com/@dhifallah.othmen/extraction-et-entra%C3%AEnement-des-entit%C3%A9s-nomm%C3%A9es-avec-spacy-90f7e1a219d7\n",
         "*  https://course.spacy.io/fr/\n",
         "*  https://datacorner.fr/spacy/"
-      ],
-      "metadata": {
-        "id": "Gvyng6fe_wVN"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "r1sNTjEG5xCe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "r1sNTjEG5xCe",
         "outputId": "c6f3ba97-04bf-46cc-c087-334045d14a56"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: spacy in /usr/local/lib/python3.9/dist-packages (3.5.1)\n",
@@ -154,7 +140,7 @@
         }
       ],
       "source": [
-        "!pip install -U spacy\n",
+        "!pip3 install -U spacy\n",
         "!python -m spacy download fr_core_news_md\n",
         "import spacy\n",
         "from spacy import displacy\n",
@@ -164,29 +150,34 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Code qui permet la normalisation du texte"
-      ],
       "metadata": {
         "id": "WW4jTsgs_vVi"
-      }
+      },
+      "source": [
+        "Code qui permet la normalisation du texte"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "o2qMkaSLCUsr"
+      },
+      "outputs": [],
       "source": [
         "import re\n",
         "import numpy as np\n",
         "from bs4 import BeautifulSoup\n",
         "from collections import Counter"
-      ],
-      "metadata": {
-        "id": "o2qMkaSLCUsr"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JN2z7AcR_lPT"
+      },
+      "outputs": [],
       "source": [
         "# Charger le fichier \n",
         "with open(\"/content/drive/MyDrive/Colab Notebooks/gd-fiscalite_depenses-utf8-sgml-cwb.html\", \"r\") as f:\n",
@@ -209,32 +200,20 @@
         "\n",
         "with open(\"fichier_sans_lignes_vides.html\", \"w\") as f:\n",
         "    f.write(\"\\n\".join(lines))\n"
-      ],
-      "metadata": {
-        "id": "JN2z7AcR_lPT"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Affiche le début du contenu du texte \"fichier_sans_lignes_vides.html\""
-      ],
       "metadata": {
         "id": "1n8y2oJxGqJE"
-      }
+      },
+      "source": [
+        "Affiche le début du contenu du texte \"fichier_sans_lignes_vides.html\""
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from IPython.display import HTML\n",
-        "\n",
-        "with open(\"fichier_sans_lignes_vides.html\", \"r\") as f:\n",
-        "    content = f.readlines()\n",
-        "    \n",
-        "HTML(\"\".join(content[:10]))#Affiche les 10 premieres lignes"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -243,14 +222,9 @@
         "id": "jXWh4oPNGjaT",
         "outputId": "4fcbc3e2-d3de-4647-fbc5-3bb24cf96157"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "<text id=\"x3.100\" theme=\"Fiscalité et dépenses publiques\" authortype=\"Citoyen / Citoyenne\" title=\"INDEXATION DES RETRAITES\" pubdatetime=\"2019-01-22 09:58:36\" pubdate=\"2019-01-22\" pubweek=\"2019-04\" updatetime=\"NULL\" authorzipcode=\"68100\" department=\"Haut-Rhin\" departmentiso=\"FR-68\" region=\"Grand Est\" regioniso=\"FR-GES\">\n",
               "Chaque citoyen même modeste devrait payer l'impôt sur le revenu. Ne pas prendre la classe moyenne pour des vaches à lait. Supprimer la taxe d'habitation pour tout le monde et ne pas faire payer à nouveau la classe moyenne.\n",
@@ -262,44 +236,37 @@
               "Je souhaite que l'indexation sur les retraites soit rétablie et je demande l'annulation de l'augmentation de la CSG pour tous les retraités.\n",
               "</text>\n",
               "<text id=\"x3.1000\" theme=\"Fiscalité et dépenses publiques\" authortype=\"Citoyen / Citoyenne\" title=\"Etalement des tranches impositions\" pubdatetime=\"2019-01-22 11:30:38\" pubdate=\"2019-01-22\" pubweek=\"2019-04\" updatetime=\"NULL\" authorzipcode=\"13680\" department=\"Bouches-du-Rhône\" departmentiso=\"FR-13\" region=\"Provence-Alpes-Côte d'Azur\" regioniso=\"FR-PAC\">\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
+          "execution_count": 18,
           "metadata": {},
-          "execution_count": 18
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "from IPython.display import HTML\n",
+        "\n",
+        "with open(\"fichier_sans_lignes_vides.html\", \"r\") as f:\n",
+        "    content = f.readlines()\n",
+        "    \n",
+        "HTML(\"\".join(content[:10]))#Affiche les 10 premieres lignes"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Premier traitement de texte avec spacy tokenisation de tout le texte"
-      ],
       "metadata": {
         "id": "bpk6NKIc19gi"
-      }
+      },
+      "source": [
+        "Premier traitement de texte avec spacy tokenisation de tout le texte"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Analyser le texte en utilisant SpaCy\n",
-        "with open(\"fichier_sans_lignes_vides.html\", \"r\", encoding=\"utf-8\") as f:\n",
-        "    # Lecture des 100 premières lignes\n",
-        "    lines = f.readlines()[:100]\n",
-        "    # Concaténation des lignes en un seul texte\n",
-        "    text = \"\".join(lines)\n",
-        "doc = nlp(text)\n",
-        "\n",
-        "# Compter la fréquence de chaque mot dans le texte\n",
-        "word_freq = Counter()\n",
-        "for token in doc:\n",
-        "    if not token.is_stop and not token.is_punct and not token.is_space:\n",
-        "        word_freq[token.text] += 1\n",
-        "\n",
-        "# Afficher les 50 mots les plus fréquents dans le texte\n",
-        "top_words = word_freq.most_common(20)\n",
-        "for word, freq in top_words:\n",
-        "    print(word, freq)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -307,11 +274,10 @@
         "id": "s-nhQyyz19CC",
         "outputId": "1d444112-e2ab-4abf-d3b9-51066c800f3d"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "< 25\n",
             "> 25\n",
@@ -335,24 +301,40 @@
             "/text 12\n"
           ]
         }
+      ],
+      "source": [
+        "# Analyser le texte en utilisant SpaCy\n",
+        "with open(\"fichier_sans_lignes_vides.html\", \"r\", encoding=\"utf-8\") as f:\n",
+        "    # Lecture des 100 premières lignes\n",
+        "    lines = f.readlines()[:100]\n",
+        "    # Concaténation des lignes en un seul texte\n",
+        "    text = \"\".join(lines)\n",
+        "doc = nlp(text)\n",
+        "\n",
+        "# Compter la fréquence de chaque mot dans le texte\n",
+        "word_freq = Counter()\n",
+        "for token in doc:\n",
+        "    if not token.is_stop and not token.is_punct and not token.is_space:\n",
+        "        word_freq[token.text] += 1\n",
+        "\n",
+        "# Afficher les 50 mots les plus fréquents dans le texte\n",
+        "top_words = word_freq.most_common(20)\n",
+        "for word, freq in top_words:\n",
+        "    print(word, freq)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Pour le moment nous allons continuer avec des exemples simples"
-      ],
       "metadata": {
         "id": "pTxXaguE7kU9"
-      }
+      },
+      "source": [
+        "Pour le moment nous allons continuer avec des exemples simples"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "doc = nlp(\"Terrible désillusion pour la championne du monde\")\n",
-        "for chunk in doc.noun_chunks:\n",
-        "    print(chunk.text, \" --> \", chunk.label_)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -360,26 +342,26 @@
         "id": "dhik4rRf8Cld",
         "outputId": "fd2d45e1-20c2-468b-e887-8610a1b240f7"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Terrible désillusion  -->  NP\n",
             "la championne  -->  NP\n",
             "monde  -->  NP\n"
           ]
         }
+      ],
+      "source": [
+        "doc = nlp(\"Terrible désillusion pour la championne du monde\")\n",
+        "for chunk in doc.noun_chunks:\n",
+        "    print(chunk.text, \" --> \", chunk.label_)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "doc = nlp(\"Demain je travaille en France chez Microsoft\")\n",
-        "for ent in doc.ents:\n",
-        "    print(ent.text, ent.label_)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -387,17 +369,36 @@
         "id": "1vMlnzXw-NKd",
         "outputId": "1549dfe9-c20d-438f-8aae-2635094f29b9"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "France LOC\n",
             "Microsoft ORG\n"
           ]
         }
+      ],
+      "source": [
+        "doc = nlp(\"Demain je travaille en France chez Microsoft\")\n",
+        "for ent in doc.ents:\n",
+        "    print(ent.text, ent.label_)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.6"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
