--- a/segmentation_paul.ipynb
+++ b/segmentation_paul.ipynb
@@ -100,17 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'FR-31': [\"Informer sur les grands postes de dépenses du budget de l'état. Les gens n'ont pas idée que les grands postes ce sont les salaires des fonctionnaires, et les prestations sociales. Ils ont l'impression que des gens se gavent avec leur argent.\", \"Il faudrait faire un équivalent à ce qui se fait aux USA: Tout citoyen français est redevable d'impôt en France. Si il réside à l'étranger, il paie ses impôts localement dans son pays de résidence, mais fait une déclaration aussi en France. Son impôt est calculé comme si il résidait en France. Si le montant est supérieur à ce qu'il paie dans le pays de résidence, alors il paie à la France le complément: (impôt qu'il paierait si résident français - impôt payé dans pays de résidence). Avec ce système, il devient inutile de se domicilier à l’étranger (Belgique, Monaco, Portugal,...) pour échapper à l’impôt français, car on n'y gagne plus rien. Si ce principe n'est pas respecté, la personne perd sa citoyenneté française, et devra prendre une autre nationalité et donc ne bénéficiera plus des prestations sociales en France (santé,etc..).\", 'Les impôts sur le revenu', \"Reculer l'âge de la retraite|Revoir les conditions d'attribution de certaines aides sociales\", \"Plus que les conditions d'attribution, c'est le montant. On peut voir que souvent cela ne pousse pas à travailler, car on ne touche pas beaucoup plus à travailler en proportion. En cas de chômage, un montant minimum identique pour tout le monde et sur une durée de un an max.\", 'Aucune. Déjà trop dépensier.', 'Aucune', \"Trop d'augmentation des impôts sur le mandat de Hollande. Ras le bol. Il faut diminuer les impôts.\"], 'FR-46': [\"un accueil téléphonique rapide et gratuit (CAF 0.06cts/mn) un site internet plus fonctionnel avec une obligation de réponse rapide, clair et précise en réponse à vos demandes ce qui éviterait d'appeler au téléphone d'où perte de temps pour les fonctionnaires et donc une amélioration de la productivité\", \"arrêter de prendre les derniers déciles pour des vaches à lait - tout le monde devrait payer des impôts ce qui permettrait à la totalité de la population d'appartenir à la nation quitte à les rembourser par le biais des allocations CICE, Crédit imôt recherche : les sommes versées dans ces cadres devraient être en corrélation avec les capitaux propres de l'entreprise, le montant des dividendes versés afin que ces sommes ne soient pas avalées par les actionnaires ISF pour cet impôt mais dont serait déduit les investissements réalisés dans les entreprises sur une durée de 5 années minimum\", \"L'ensemble des impôts directs\", \"Revoir les conditions d'attribution de certaines aides sociales|Créer enfin de la productivité dans les services (états, collectivités, région)\", \"L'ensemble des aides sociales\", \"Aucune - il faut impérativement baisser les coûts afin de générer des économies et ainsi permettre de financer de nouveaux domaines d'action publiques mais seulement après avoir généré des baisses de coûts\", 'Salaires des fonctionnaires : Il ne devrait y avoir aucun salaire de fonctionnaire supérieur à celui du 1er ministre Cours des comptes : obligation de mettre en oeuvre les actions correctives dans les 2 années suivant le rapport Suppression des départements Cumul emploi retraite : interdiction de cumul emploi retraite pour un fonctionnaire dont la retraite est supérieure à 5000€ Limiter le nombre de ministres, directeurs de cabinets, réduire le nombre de commissions Téophiles et les salaires des intervenants Obliger les régions à réduire leurs dépenses base avant la réorganisation (ex Occitanie qui a augmenté ces dépenses) Député - Sénateurs à diviser par 2 tout en laissant un minimum de 2 députés et 2 sénateurs par département'], 'FR-34': [\"Faire reposer l'impôt sur le revenu sur la totalité des rentrées , donc y intégrer tous les revenus de remplacement ( allocations , par exemple) ; bien sûr modifier en conséquence le barême.... Il est malsain de rendre l'impôt indolore (CSG ,prélèvement à la source ) ; cela déresponsabilise le citoyen\", \"Augmenter le temps de travail|Revoir les conditions d'attribution de certaines aides sociales\", 'Les aides au logement, soit directes ,soit indirectes doivent être mieux ciblées sur ceux qui en ont vraiment besoin .Les alloc.logement profitent surtout aux loueurs qui augmentent les loyers . Les logements sociaux ne sont pas toujours occupés par de vrais ayant-droits .']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "d_dept_rep = {}\n",
     "for i in range(len(lines)):\n",
@@ -133,8 +125,8 @@
     "                d_dept_rep[p].append(lines[i])\n",
     "            else:\n",
     "                d_dept_rep[p] = [lines[i]]\n",
-    "    if i > 100:\n",
-    "        break\n",
+    "    # if i > 10000:\n",
+    "    #     break\n",
     "\n",
     "list_dep = [\"FR-09\",\"FR-11\",\"FR-12\",\"FR-30\",\"FR-31\",\"FR-32\",\"FR-34\",\"FR-46\",\"FR-48\",\"FR-65\",\"FR-66\",\"FR-81\",\"FR-82\"]\n",
     "for cle in list(d_dept_rep.keys()):\n",
@@ -146,28 +138,19 @@
     "#par départment c'est déjà mieux (données sur 100 départements)\n",
     "\n",
     "#trier de manière décroissante\n",
-    "sorted_d = dict(sorted(d_dept_rep.items(), key=lambda x: len(x[1]), reverse=True))\n",
-    "print(sorted_d)"
+    "sorted_d = dict(sorted(d_dept_rep.items(), key=lambda x: len(x[1]), reverse=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\"Faire reposer l'impôt sur le revenu sur la totalité des rentrées , donc y intégrer tous les revenus de remplacement ( allocations , par exemple) ; bien sûr modifier en conséquence le barême.... Il est malsain de rendre l'impôt indolore (CSG ,prélèvement à la source ) ; cela déresponsabilise le citoyen\", \"Augmenter le temps de travail|Revoir les conditions d'attribution de certaines aides sociales\", 'Les aides au logement, soit directes ,soit indirectes doivent être mieux ciblées sur ceux qui en ont vraiment besoin .Les alloc.logement profitent surtout aux loueurs qui augmentent les loyers . Les logements sociaux ne sont pas toujours occupés par de vrais ayant-droits .']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def rep_dep(num_dep):\n",
     "    return sorted_d[\"FR-\"+str(num_dep)]\n",
     "\n",
-    "print(rep_dep(34))"
+    "# print(rep_dep(34))"
    ]
   }
  ],
